# Pet-Diet-Tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  bowl_analyzer.py  camera_capture.py  check_dependencies.py  config.py  event_log.json  logger_config.py  main.py  monitor_history.py  notifier.py  pet_monitor.py  pyproject.toml  requirements-minimal.txt  requirements.txt  test_camera.py  test_gemini.py  test_monitor.py
src/: __init__.py  __main__.py  config.py  event_detector.py  main.py  web_server.py
src/pet_diet_tracker/: __init__.py  bowl_analyzer.py  camera_capture.py  main.py  monitor_history.py  notifier.py  pet_monitor.py
src/services/: __init__.py  camera_service.py  event_history_service.py  image_analysis_service.py  monitoring_service.py  notification_service.py
tests/: test_camera_service.py  test_event_detector.py  test_main.py  test_monitoring_service.py  test_web_server.py
tests/mocks/: mock_camera.py  mock_notification_service.py
