[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pet-food-consumption-monitor"
version = "0.1.0"
description = "A system to monitor pet food consumption using computer vision"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask",
    "pytest",
    "google-genai",
    "Pillow",
    "picamera2",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
pet-food-monitor = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true